# brain-robot-interface

./: .gitignore  .gitmodules  DEMO_MEDIA_GUIDE.txt  README.md  Requirement_doc.md  THOUGHTLINK_DESIGN.md  THOUGHTLINK_TECH_REPORT.md  command_mux.py  cv_pose_gestures.py  logger.py  pyproject.toml  requirements.txt  run_sim.py  sim_controller.py
bundles/g1_mjlab/: model.xml  policy.onnx  scene.xml
bundles/go2_mjlab/: model.xml  policy.onnx  scene.xml
examples/: action_sequence.py  bci_inference_policy.py  dataset_smoke.py  eval_closed_loop.py  intent_policy.py  make_tech_report_pdf.py  minimal_policy.py  stability_smoke.py  train_ella_intent.py  train_intent.py  tune_stability.py
logs/: session_1770090409.csv  session_1770090545.csv  session_1770090678.csv  session_1770090819.csv
src/: __init__.py
src/apps/: __init__.py  run_mirror_view.py  run_robot_walk.py  run_sim_walk.py
src/backends/: __init__.py  sim_mjlab_onnx.py  unitree_lowstate_mirror.py  unitree_sport_rpc.py
src/bri/: __init__.py  controller.py
src/bri/backends/: __init__.py  mirror.py  robot.py  sim.py
src/bri/command/: __init__.py  action_controller.py  actions.py  cmd_vel.py
src/command/: __init__.py  command_mux.py  csv_logger.py  cv_pose_gestures.py
src/thoughtlink/: __init__.py  data.py  ella.py  features.py  intent_model.py  labels.py  linear.py  metrics.py  stability.py
