[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bri"
version = "0.1.0"
description = "Brain Robot Interface"
requires-python = ">=3.10,<3.12"
dependencies = [
  "mujoco>=3.4.0",
  "numpy>=2.2.6",
  "onnxruntime>=1.24.1",
  "opencv-python>=4.13.0.92",
  "torch>=2.10.0",
  "unitree-sdk2py",
  "eclipse-zenoh>=1.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
unitree-sdk2py = { git = "https://github.com/Kaweees/unitree_sdk2_python.git", branch = "main" }
